# stock_mcp

./: .gitignore  main.py  mcp_server.py  pyproject.toml  requirements.txt  test.py  zh_mcp_server.py
agents/: split_task_agent.py
mcp_tools/: __init__.py  base_tool.py  financial_statements_tool.py  historical_data_tool.py  news_tool.py  stock_info_tool.py  technical_analysis_tool.py  web_search_tool.py
zh_mcp_tools/: __init__.py  base_tool.py  zh_financial_statements_tool.py  zh_historical_data_tool.py  zh_market_tool.py  zh_news_tool.py  zh_stock_info_tool.py  zh_technical_analysis_tool.py
